# ml-predictive-maintenance

./: .gitignore  README.md  app.py  demo.py  pyproject.toml  requirements.txt
.github/workflows/: vercel.yaml
artifact/06_16_2026_20_13_35/data_ingestion/ingested/: test.csv  train.csv
config/: schema.yaml
model_bucket/: predictive_maintenance_model.pkl
notebooks/: mongodb_connection.ipynb  predictive maintenance.ipynb
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/constants/: __init__.py
src/data_access/: predictive_ml.py
src/entity/: config_entity.py  estimator.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
static/css/: style.css
templates/: index.html
venv_predictive_maintenance_ml/: pyvenv.cfg
venv_predictive_maintenance_ml/Scripts/: activate  activate.bat  get_gprof  get_objgraph  jp.py  undill
