[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Rohit Rane", email = "ranerohit996@gmail.com"}]

dependencies = [
    "numpy",
    "pandas",
    "pymongo",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "imbalanced-learn",
    "ipykernel",
    "from-root",
    "certifi",
    "dill",
    "PyYAML",
    "boto3",
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "starlette==0.36.3",
    "jinja2==3.1.3",
    "python-multipart",
    "mypy-boto3-s3"
]

[tool.setuptools]
packages = {find = {}}